# bets

./: .gitignore
bets-backend/: README.md  manage.py  pyproject.toml
bets-backend/auth0authorization/: backend.py  backends.py  test  urls.py  utils.py  views.py
bets-backend/bets/: asgi.py  auth_views.py  settings.py  urls.py  utils.py  wsgi.py
bets-backend/bets/templates/: index.html
bets-backend/core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
bets-backend/core/migrations/: 0001_initial.py  0002_bet_is_public_betoption_betparticipant_chosen_option.py  0003_alter_betoption_title_and_more.py
bets-cli/: README.md  app.json  package-lock.json  package.json
bets-cli/app/: modal.tsx
bets-cli/app/(tabs)/: _layout.tsx  index.tsx  two.tsx
bets-cli/components/: PublicBets.tsx  UserBets.tsx
bets-cli/components/Bet/: CreateBet.tsx
